# onewire

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Xargo.toml  avr-atmega328p.json
examples/embassy_rp2040/: Cargo.toml  README.md  build.rs
examples/embassy_rp2040/.cargo/: config.toml
examples/embassy_rp2040/src/: main.rs
src/: ds18b20.rs  lib.rs
