[package]
name = "onewire"
version = "0.3.10"
authors = ["Michael Watzko <michael@watzko.de>"]
repository = "https://github.com/kellerkindt/onewire"
description = "OneWire implementation using embedded_hal as abstraction layer, based on arduino OneWire library. WIP"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]

[dependencies]
byteorder = { version = "1", default-features = false }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"
