[package]
name = "onewire"
version = "0.3.13"
authors = ["Michael Watzko <michael@watzko.de>"]
repository = "https://github.com/kellerkindt/onewire"
description = "OneWire implementation using embedded_hal as abstraction layer, based on Arduino OneWire library"
keywords = ["embedded", "onewire", "embedded-hal-driver", "1wire", "stm32"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"

[lib]

[dependencies]
byteorder = { version = "1", default-features = false }
embedded-hal = "1.0.0"
defmt = { version = "0.3.10", optional = true }

[features]
default = ["crc-lookup"]
defmt-debug2format = []

# Enables faster lookups using the DOW CRC lookup table
crc-lookup = []