[package]
name = "embassy_rp2040"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"


[dependencies]
onewire = { path = "../..", features = ["defmt", "defmt-debug2format"] }

defmt = "0.3.10"
defmt-rtt = "0.4.1"

cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.3.1" , features = ["rp2040", "defmt", "time-driver", "critical-section-impl"]}
embassy-time = "0.4.0"

panic-probe = "0.3.2"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
